--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
         .modal-exit-active { opacity: 0; transition: opacity 0.2s ease-in-out; }
         #settingsModalContent, #aiToolsModalContent { transition: all 0.3s ease-in-out; }
 
-        /* --- Tables --- */
-/* --- Mobile Table Optimized --- */
+       /* --- Mobile Table Optimized (v19.52 Final) --- */
         @media (max-width: 768px) {
             /* 1. Container & Table Structure */
             .table-container { 
