DIT Package Inclusion
Signed-off-by: moollc <135183296+moollc@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -2007,6 +2007,36 @@ const mBTOG = {
             { description: 'Drone Operator', unit: 'Day', rate: 55000 },
             { description: 'Camera Utility', unit: 'Day', rate: 25000 },
 
+	    /* --- DIT & Video Village Rates (Daily JMD) --- */
+    // Consolidated Equipment Rates (Jamaica Market 2024-2026)
+    { description: "DIT Computer", rate: 16000, unit: "Day" },
+    { description: "Reference Monitor", rate: 62000, unit: "Day" },
+    { description: "GUI Monitor", rate: 19000, unit: "Day" },
+    { description: "Field Monitor", rate: 23000, unit: "Day" },
+    { description: "Wireless Video System", rate: 47000, unit: "Day" },
+    { description: "Video I/O Device", rate: 11000, unit: "Day" },
+    { description: "SDI Router", rate: 31000, unit: "Day" },
+    { description: "LUT Box", rate: 23000, unit: "Day" },
+    { description: "Hardware Scopes", rate: 31000, unit: "Day" },
+    { description: "Grading Panel", rate: 39000, unit: "Day" },
+    { description: "RAID Storage Array", rate: 39000, unit: "Day" },
+    { description: "SSD Shuttle Drive", rate: 8000, unit: "Day" },
+    { description: "Card Readers Package", rate: 16000, unit: "Day" },
+    { description: "LTO Archival", rate: 62000, unit: "Day" },
+    { description: "DIT Cart", rate: 62000, unit: "Day" },
+    { description: "UPS / Power Distribution", rate: 16000, unit: "Day" },
+    { description: "Hubs & Accessories", rate: 8000, unit: "Day" },
+    { description: "Cables & Management Kit", rate: 16000, unit: "Day" },
+    { description: "Rack Shelves & Drawers", rate: 5000, unit: "Day" },
+    { description: "Calibration Probe", rate: 8000, unit: "Day" },
+    { description: "Network Switch", rate: 8000, unit: "Day" },
+    { description: "Monitor Stands", rate: 16000, unit: "Day" },
+    { description: "Expendables Kit", rate: 8000, unit: "Day" },
+    // Consolidated Package Rates
+    { description: "Full DIT Workstation Package", rate: 465000, unit: "Day" },
+    { description: "DIT Package", rate: 388000, unit: "Day" },
+    { description: "Video Village Package", rate: 233000, unit: "Day" },
+			
             // --- Lighting & Grip ---
             { description: 'Gaffer', unit: 'Day', rate: 55000 },
             { description: 'Best Boy Electric', unit: 'Day', rate: 40000 },
